--- a/package.json
+++ b/package.json
@@ -1,53 +1,39 @@
 {
   "name": "juego_jalea",
-  "private": true,
   "type": "module",
+  "private": true,
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "npx nuxthub preview",
-    "deploy": "npx nuxthub deploy",
-    "postinstall": "nuxt prepare",
-    "lint": "eslint ."
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/content": "3.7.1",
-    "@nuxt/eslint": "^1.4.1",
+    "@nuxt/eslint": "1.10.0",
     "@nuxt/fonts": "0.11.4",
-    "@nuxt/icon": "2.0.0",
+    "@nuxt/icon": "2.1.0",
     "@nuxt/image": "1.11.0",
-    "@nuxt/test-utils": "3.19.2",
-    "@nuxthub/core": "^0.9.0",
+    "@nuxt/scripts": "0.13.0",
+    "@nuxt/test-utils": "3.20.1",
+    "@nuxthub/core": "0.9.0",
     "@nuxtjs/tailwindcss": "7.0.0-beta.1",
-    "better-sqlite3": "^12.4.1",
+    "@sidebase/nuxt-auth": "1.1.0",
+    "@unhead/vue": "^2.0.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-vue-next": "^0.546.0",
-    "nuxt": "^3.17.5",
-    "reka-ui": "^2.5.1",
+    "eslint": "^9.39.0",
+    "lucide-vue-next": "^0.552.0",
+    "next-auth": "~4.21.1",
+    "nuxt": "^4.2.0",
     "shadcn-nuxt": "2.3.2",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.15",
+    "tailwindcss": "^4.1.16",
     "tw-animate-css": "^1.4.0",
-    "vue": "^3.5.16",
-    "vue-router": "^4.5.1"
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
-    "@nuxt/eslint-config": "^1.4.1",
-    "eslint": "^9.29.0",
-    "typescript": "^5.8.3",
-    "vue-tsc": "^2.2.10",
-    "wrangler": "^4.20.1"
-  },
-  "packageManager": "pnpm@10.12.1",
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "@parcel/watcher",
-      "esbuild",
-      "sharp",
-      "unrs-resolver",
-      "workerd"
-    ]
+    "wrangler": "^4.45.3"
   }
 }
