--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
+    "db:generate": "drizzle-kit generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.11.1",
     "@nuxt/eslint": "1.10.0",
     "@nuxt/fonts": "0.11.4",
     "@nuxt/icon": "2.1.0",
@@ -20,13 +22,18 @@
     "@nuxtjs/tailwindcss": "7.0.0-beta.1",
     "@sidebase/nuxt-auth": "1.1.0",
     "@unhead/vue": "^2.0.19",
+    "@vueuse/core": "^14.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.44.7",
     "eslint": "^9.39.0",
     "lucide-vue-next": "^0.552.0",
     "next-auth": "~4.21.1",
+    "nitro-cloudflare-dev": "0.2.2",
     "nuxt": "^4.2.0",
+    "reka-ui": "^2.6.0",
     "shadcn-nuxt": "2.3.2",
+    "sharp": "^0.34.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16",
     "tw-animate-css": "^1.4.0",
@@ -34,6 +41,7 @@
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "drizzle-kit": "^0.31.6",
     "wrangler": "^4.45.3"
   }
 }
