--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-auth": "~4.21.1",
     "nitro-cloudflare-dev": "0.2.2",
     "nuxt": "^4.2.0",
+    "nuxt-authorization": "0.3.5",
     "reka-ui": "^2.6.0",
     "shadcn-nuxt": "2.3.2",
     "sharp": "^0.34.4",
