--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.44.7",
+    "drizzle-zod": "^0.8.3",
     "eslint": "^9.39.0",
     "lucide-vue-next": "^0.552.0",
     "next-auth": "~4.21.1",
@@ -39,7 +40,8 @@
     "tailwindcss": "^4.1.16",
     "tw-animate-css": "^1.4.0",
     "vue": "^3.5.22",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "drizzle-kit": "^0.31.6",
