--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/tailwindcss": "7.0.0-beta.1",
     "@sidebase/nuxt-auth": "1.1.0",
     "@unhead/vue": "^2.0.19",
+    "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^14.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -39,6 +40,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16",
     "tw-animate-css": "^1.4.0",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3",
     "zod": "^4.1.12"
