--- a/package.json
+++ b/package.json
@@ -20,15 +20,17 @@
     "@nuxt/test-utils": "3.20.1",
     "@nuxthub/core": "0.9.0",
     "@nuxtjs/tailwindcss": "7.0.0-beta.1",
-    "@sidebase/nuxt-auth": "1.1.0",
     "@unhead/vue": "^2.0.19",
     "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^14.0.0",
+    "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.44.7",
     "drizzle-zod": "^0.8.3",
     "eslint": "^9.39.0",
+    "kysely": "^0.28.8",
+    "kysely-d1": "^0.4.0",
     "lucide-vue-next": "^0.552.0",
     "next-auth": "~4.21.1",
     "nitro-cloudflare-dev": "0.2.2",
